services-service/prod-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  labels:
    app: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: shym/products:latest
        readinessProbe:
          httpGet:
            path: /services/health
            port: 8090
          initialDelaySeconds: 120
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /services/liveness
            port: 8090
          initialDelaySeconds: 130
          timeoutSeconds: 10
          failureThreshold: 10
        ports:
        - containerPort: 8090
