services-service/prod-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: products-ingress
spec:
  backend:
    serviceName: products
    servicePort: 8090
